--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,12 @@
 
       <dependency>
         <groupId>${project.groupId}</groupId>
+        <artifactId>zipkin-storage-cassandra3</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>${project.groupId}</groupId>
         <artifactId>zipkin-autoconfigure-storage-cassandra</artifactId>
         <version>${project.version}</version>
       </dependency>
@@ -476,7 +482,7 @@
             <exclude>**/.idea/**</exclude>
             <exclude>LICENSE</exclude>
             <exclude>**/*.md</exclude>
-            <exclude>dsc-cassandra-*/**</exclude>
+            <exclude>apache-cassandra-*/**</exclude>
             <exclude>elasticsearch-2*/**</exclude>
             <exclude>kafka_*/**</exclude>
             <exclude>src/test/resources/**</exclude>
